# test-dist

./: Cargo.toml
src/: main.rs
